--- a/Estimote Demo/styles/main.css
+++ b/Estimote Demo/styles/main.css
@@ -1,9 +1,70 @@
 body, html {
     margin: 0;
     height: 100%;
-    width: 100%;
+    width: 100%;    
+}
+/*custom overrides*/
+.km-view-title,.km-footer{
+    background-color: #A2B03F;
+}
+.km-flat{
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
+}
+.km-flat .km-content{
+    background-color: #B7F2F6;
+    color: #302B2F;
+}
+.km-flat .km-tabstrip .km-state-active{
+    background-color: #DE4823;
+}
+.rounded{
+    border-radius:5px;
+    background-color:#FFFEF0;
+    margin:10px;
+    padding:10px;
+}
+.km-phone .km-tabstrip .km-icon{
+    display:none;
+}
+.km-flat .km-tabstrip .km-button{
+    font-size: 1em;
+}
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?efunuv');
+	src:url('fonts/icomoon.eot?#iefixefunuv') format('embedded-opentype'),
+		url('fonts/icomoon.woff?efunuv') format('woff'),
+		url('fonts/icomoon.ttf?efunuv') format('truetype'),
+		url('fonts/icomoon.svg?efunuv#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+    font-size: 3em;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1.5;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-focus:before {
+	content: "\e01b";
+}
+.icon-lightbulb:before {
+	content: "\e030";
+}
+.icon-target:before {
+	content: "\e04e";
+}
 /* COMMON STYLES*/
 .view-content h1 {
     color: #42454a;
