--- a/Estimote Demo/views/beacons.html
+++ b/Estimote Demo/views/beacons.html
@@ -1,11 +1,14 @@
-<div data-role="view" data-title="Estimote Beacons" data-layout="main" data-model="app.beaconService.viewModel">
+<div data-role="view" data-title="Find Featured Books" data-layout="main" data-model="app.beaconService.viewModel">
   <div class="rounded">
-            <div class="buttons">
-                <button data-role="button" class="button" data-bind="click: start">Start</button>
-                <button data-role="button" class="button" data-bind="click: stop">Stop</button>
+            
+            <div id="beaconlog">
+                Looking for beacons...
             </div>
-            <div id="beaconlog" style="text-align: left; font: 9px;width:90%; border: 1px solid #DDD; border-radius: 5px; padding: 5px; color: #666">
-                When beacons come in range of this device, we will log their raw data here..
+      
+            <div class="buttons">
+                <button data-role="button" class="button start" data-bind="click: start">Start Searching</button>
+            
+                <button data-role="button" class="button stop" data-bind="click: stop">Stop Searching</button>
             </div>
    </div>
 </div>
